--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -2,6 +2,10 @@
 <resources>
     <string name="app_name">Android Labs</string>
     <string name="hello_message">कैसे हो!</string>
+    <string name="textview_message">मेरे जीयूआई को देखो</string>
     <string name="ButtonText">I\’m a button</string>
     <string name="toast_message">यहाँ अधिक जानकारी है</string>
+    <string name="button_click">यहां क्लिक करें</string>
+    <string name="checkbox_message">इसकी जांच करें!</string>
+
 </resources>
