--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="receiveButton">Receive</string>
     <string name="messageTypeArea">Type here</string>
     <string name="sendButton">Send</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choice1">First Choice</string>
+    <string name="choice2">Second Choice</string>
+    <string name="choice3">Third Choice</string>
 </resources>
